--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -32,6 +32,8 @@
       <p>
           <strong>Don't have an account?</strong><a href="{% url 'register' %}"> Sign Up Now</a>
     </p>
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
 
   </form>
     
